--- a/homework-for-week-7.html
+++ b/homework-for-week-7.html
@@ -373,7 +373,8 @@ div.csl-indent {
 <p><strong>Students as Learners:</strong></p>
 <ul>
 <li>Finish this week’s worksheet</li>
-<li>Read the required literature</li>
+<li>Use reading week to catch up on the readings of Weeks 1-5</li>
+<li>Read the required literature for Week 7 (see Moodle/Talis)</li>
 </ul>
 <p><strong>Students as Researchers:</strong></p>
 <ul>
