--- a/list-of-references.html
+++ b/list-of-references.html
@@ -379,9 +379,6 @@ Adcock, R., &amp; Collier, D. (2001). <span class="nocase">Measurement Validity:
 Arel-Bundock, V. (2022). <span class="nocase">modelsummary: Data and Model Summaries in R</span>. <em>Journal of Statistical Software</em>, <em>103</em>(1), 1–23.
 </div>
 <div class="csl-entry">
-Boix, C., Miller, M., &amp; Rosato, S. (2018). <em><span class="nocase">Boix-Miller-Rosato Dichotomous Coding of Democracy, 1800-2015</span></em> (Version V3). Harvard Dataverse. <a href="https://doi.org/10.7910/DVN/FJLMKT">https://doi.org/10.7910/DVN/FJLMKT</a>
-</div>
-<div class="csl-entry">
 Boix, C., &amp; Stokes, S. (2003). <span>Endogenous Democratization</span>. <em><span>World Politics</span></em>, <em>55</em>, 517–549.
 </div>
 <div class="csl-entry">
@@ -413,6 +410,9 @@ Long, J. S. (1997). <em><span class="nocase">Regression Models for Categorial an
 </div>
 <div class="csl-entry">
 Marshall, M. G., &amp; Gurr, T. R. (2020). <em><span class="nocase">Polity V Project: Political Regime Characteristics and Transitions, 1800-2018</span></em>. available online at <a href="https://www.systemicpeace.org/inscr/p5manualv2018.pdf" class="uri">https://www.systemicpeace.org/inscr/p5manualv2018.pdf</a>.
+</div>
+<div class="csl-entry">
+Miller, M., Boix, C., &amp; Rosato, S. (2022). <em><span class="nocase">Boix-Miller-Rosato Dichotomous Coding of Democracy, 1800-2020</span></em> (Version V1) [Data set]. Harvard Dataverse. <a href="https://doi.org/10.7910/DVN/FENWWR">https://doi.org/10.7910/DVN/FENWWR</a>
 </div>
 <div class="csl-entry">
 Oxford Learner’s Dictionaries. (n.d.). available online at <a href="https://www.oxfordlearnersdictionaries.com/" class="uri">https://www.oxfordlearnersdictionaries.com/</a>.
