--- a/model-building.html
+++ b/model-building.html
@@ -355,7 +355,7 @@ div.csl-indent {
       <div class="body-inner">
         <div class="book-header" role="navigation">
           <h1>
-            <i class="fa fa-circle-o-notch fa-spin"></i><a href="./"><div class="line-block">PO33Q: Determinants of Democracy - <br>Analysing Emergence, Survival, and Fall <img align="right" src="images/Crest.png" width="75"></div></a>
+            <i class="fa fa-circle-o-notch fa-spin"></i><a href="./"><div class="line-block">PO33Q: Determinants of Democracy - <br>Analysing Emergence, Survival, and Fall <img align="right" src="images/Crest_white.png" width="75"></div></a>
           </h1>
         </div>
 
@@ -393,8 +393,8 @@ div.csl-indent {
 
     <script>
 
-      function styleCell_y2510uki5603p6wtpe2f(i, j, css_id) {
-          var table = document.getElementById("tinytable_y2510uki5603p6wtpe2f");
+      function styleCell_zdlpdhsrzv4dagrcji4j(i, j, css_id) {
+          var table = document.getElementById("tinytable_zdlpdhsrzv4dagrcji4j");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -404,7 +404,7 @@ div.csl-indent {
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_y2510uki5603p6wtpe2f');
+        var table = document.getElementById('tinytable_zdlpdhsrzv4dagrcji4j');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -412,8 +412,8 @@ div.csl-indent {
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_y2510uki5603p6wtpe2f(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_y2510uki5603p6wtpe2f");
+      function spanCell_zdlpdhsrzv4dagrcji4j(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_zdlpdhsrzv4dagrcji4j");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -443,23 +443,23 @@ div.csl-indent {
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_iylr0oecutv3e03vp8y9',}, 
-          { positions: [ { i: 10, j: 2 }, { i: 10, j: 1 }, { i: 10, j: 3 },  ], css_id: 'tinytable_css_rvp6n0qs94k76m6aoybn',}, 
-          { positions: [ { i: 7, j: 3 }, { i: 7, j: 2 }, { i: 7, j: 1 },  ], css_id: 'tinytable_css_ovn5jrolj6incnxn44qi',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 4, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 2 }, { i: 3, j: 3 }, { i: 2, j: 2 }, { i: 9, j: 3 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 9, j: 1 }, { i: 8, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 8, j: 3 },  ], css_id: 'tinytable_css_l7md5wfe3gts97moxok3',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_evgwmjch5s0l88fqscc1',}, 
-          { positions: [ { i: 1, j: 1 }, { i: 1, j: 3 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_dk9iu6tdbat49vq2adx5',}, 
-          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_n809aoaee8sa2mle1tws',}, 
-          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_yieu0iwktx7fikmukgea',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 },  ], css_id: 'tinytable_css_mi1q3dfamk7vbbrjf0au',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_1p2hl8xph3po3o5l208v',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_nf7uqb5559qrd2alha84',}, 
+          { positions: [ { i: 0, j: 2 }, { i: 0, j: 3 },  ], css_id: 'tinytable_css_rqadi6pjb5vln5tdllf2',}, 
+          { positions: [ { i: 10, j: 2 }, { i: 10, j: 1 }, { i: 10, j: 3 },  ], css_id: 'tinytable_css_9v2ief2tr7rc9ufnei4v',}, 
+          { positions: [ { i: 7, j: 3 }, { i: 7, j: 2 }, { i: 7, j: 1 },  ], css_id: 'tinytable_css_ijwotvtojqlwn40y1jnc',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 4, j: 1 }, { i: 6, j: 1 }, { i: 3, j: 1 }, { i: 8, j: 1 }, { i: 5, j: 1 }, { i: 3, j: 2 }, { i: 9, j: 2 }, { i: 3, j: 3 }, { i: 2, j: 2 }, { i: 9, j: 3 }, { i: 4, j: 2 }, { i: 5, j: 2 }, { i: 6, j: 2 }, { i: 9, j: 1 }, { i: 8, j: 2 }, { i: 2, j: 3 }, { i: 4, j: 3 }, { i: 5, j: 3 }, { i: 6, j: 3 }, { i: 8, j: 3 },  ], css_id: 'tinytable_css_3wn98ke6az5k90sh8roc',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_o97s40gwk7p2yw48sazs',}, 
+          { positions: [ { i: 1, j: 1 }, { i: 1, j: 3 }, { i: 1, j: 2 },  ], css_id: 'tinytable_css_zna5yw6r2qdk9jk8rydl',}, 
+          { positions: [ { i: 10, j: 0 },  ], css_id: 'tinytable_css_69xyljr7jf0915brgsg5',}, 
+          { positions: [ { i: 7, j: 0 },  ], css_id: 'tinytable_css_0tvnrduq367lb5823m60',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 }, { i: 5, j: 0 }, { i: 6, j: 0 }, { i: 8, j: 0 }, { i: 9, j: 0 },  ], css_id: 'tinytable_css_l6musxurzk16yz88tiqh',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_91nzzd8ytfyksb4su42b',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_7e9a70lsa1jofmeywb3a',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_y2510uki5603p6wtpe2f(cell.i, cell.j, group.css_id);
+                  styleCell_zdlpdhsrzv4dagrcji4j(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -467,20 +467,20 @@ div.csl-indent {
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_iylr0oecutv3e03vp8y9, .table th.tinytable_css_iylr0oecutv3e03vp8y9 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_rvp6n0qs94k76m6aoybn, .table th.tinytable_css_rvp6n0qs94k76m6aoybn { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_ovn5jrolj6incnxn44qi, .table th.tinytable_css_ovn5jrolj6incnxn44qi { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_l7md5wfe3gts97moxok3, .table th.tinytable_css_l7md5wfe3gts97moxok3 { text-align: center; }
-      .table td.tinytable_css_evgwmjch5s0l88fqscc1, .table th.tinytable_css_evgwmjch5s0l88fqscc1 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_dk9iu6tdbat49vq2adx5, .table th.tinytable_css_dk9iu6tdbat49vq2adx5 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_n809aoaee8sa2mle1tws, .table th.tinytable_css_n809aoaee8sa2mle1tws { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_yieu0iwktx7fikmukgea, .table th.tinytable_css_yieu0iwktx7fikmukgea { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_mi1q3dfamk7vbbrjf0au, .table th.tinytable_css_mi1q3dfamk7vbbrjf0au { text-align: left; }
-      .table td.tinytable_css_1p2hl8xph3po3o5l208v, .table th.tinytable_css_1p2hl8xph3po3o5l208v { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_nf7uqb5559qrd2alha84, .table th.tinytable_css_nf7uqb5559qrd2alha84 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_rqadi6pjb5vln5tdllf2, .table th.tinytable_css_rqadi6pjb5vln5tdllf2 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_9v2ief2tr7rc9ufnei4v, .table th.tinytable_css_9v2ief2tr7rc9ufnei4v { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_ijwotvtojqlwn40y1jnc, .table th.tinytable_css_ijwotvtojqlwn40y1jnc { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_3wn98ke6az5k90sh8roc, .table th.tinytable_css_3wn98ke6az5k90sh8roc { text-align: center; }
+      .table td.tinytable_css_o97s40gwk7p2yw48sazs, .table th.tinytable_css_o97s40gwk7p2yw48sazs { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_zna5yw6r2qdk9jk8rydl, .table th.tinytable_css_zna5yw6r2qdk9jk8rydl { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_69xyljr7jf0915brgsg5, .table th.tinytable_css_69xyljr7jf0915brgsg5 { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_0tvnrduq367lb5823m60, .table th.tinytable_css_0tvnrduq367lb5823m60 { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_l6musxurzk16yz88tiqh, .table th.tinytable_css_l6musxurzk16yz88tiqh { text-align: left; }
+      .table td.tinytable_css_91nzzd8ytfyksb4su42b, .table th.tinytable_css_91nzzd8ytfyksb4su42b { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_7e9a70lsa1jofmeywb3a, .table th.tinytable_css_7e9a70lsa1jofmeywb3a { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_y2510uki5603p6wtpe2f" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing='true'>
+      <table class="table table-borderless" id="tinytable_zdlpdhsrzv4dagrcji4j" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing='true'>
         <thead>
 <tr>
 <th scope="col" align="center" colspan=1> </th>
