--- a/probit-application.html
+++ b/probit-application.html
@@ -355,7 +355,7 @@ div.csl-indent {
       <div class="body-inner">
         <div class="book-header" role="navigation">
           <h1>
-            <i class="fa fa-circle-o-notch fa-spin"></i><a href="./"><div class="line-block">PO33Q: Determinants of Democracy - <br>Analysing Emergence, Survival, and Fall <img align="right" src="images/Crest.png" width="75"></div></a>
+            <i class="fa fa-circle-o-notch fa-spin"></i><a href="./"><div class="line-block">PO33Q: Determinants of Democracy - <br>Analysing Emergence, Survival, and Fall <img align="right" src="images/Crest_white.png" width="75"></div></a>
           </h1>
         </div>
 
@@ -520,8 +520,8 @@ Code for the Predicted Probabilities Graph
 
     <script>
 
-      function styleCell_wzig3jjeyodgak6wff3v(i, j, css_id) {
-          var table = document.getElementById("tinytable_wzig3jjeyodgak6wff3v");
+      function styleCell_ak1k58qyifp19kux6l5g(i, j, css_id) {
+          var table = document.getElementById("tinytable_ak1k58qyifp19kux6l5g");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -531,7 +531,7 @@ Code for the Predicted Probabilities Graph
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_wzig3jjeyodgak6wff3v');
+        var table = document.getElementById('tinytable_ak1k58qyifp19kux6l5g');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -539,8 +539,8 @@ Code for the Predicted Probabilities Graph
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_wzig3jjeyodgak6wff3v(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_wzig3jjeyodgak6wff3v");
+      function spanCell_ak1k58qyifp19kux6l5g(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_ak1k58qyifp19kux6l5g");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -570,22 +570,22 @@ Code for the Predicted Probabilities Graph
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 6, j: 1 },  ], css_id: 'tinytable_css_s3vlorps3pfbu84ggzlt',}, 
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_fkbv4pd0wpv889kcmpzc',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_m06wv0px490os3rkarfa',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_n603xxfdn7sempbctdvs',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_e0rski615htm650sxq8p',}, 
-          { positions: [ { i: 6, j: 0 },  ], css_id: 'tinytable_css_d1mqbbi5tdtjhlw4dv2a',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_glk181j5byvhdevy0gr4',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_y85bdw9l37nj7sys88yb',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_ne6iijqqw1n197elqejl',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_9bvr7rlbbr3qd2fjdvab',}, 
+          { positions: [ { i: 6, j: 1 },  ], css_id: 'tinytable_css_j08z20pjn6ngxfpyp58g',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_yzdpnql29gow8nh112ww',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_knst63qppy37zu8jgmk0',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_kha7kbxhwzevxzxvrfg0',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_8u2vyglgl59556g0waht',}, 
+          { positions: [ { i: 6, j: 0 },  ], css_id: 'tinytable_css_maw0lraje7zmeyy147ap',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_ae7z6adjedswjqhtlkev',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_d01q0ew110qsi0pr8e3p',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_oukjojbmgf1pawsecxm2',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_ti2wvvsoqsyw84wk7478',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_wzig3jjeyodgak6wff3v(cell.i, cell.j, group.css_id);
+                  styleCell_ak1k58qyifp19kux6l5g(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -593,19 +593,19 @@ Code for the Predicted Probabilities Graph
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_s3vlorps3pfbu84ggzlt, .table th.tinytable_css_s3vlorps3pfbu84ggzlt { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_fkbv4pd0wpv889kcmpzc, .table th.tinytable_css_fkbv4pd0wpv889kcmpzc { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_m06wv0px490os3rkarfa, .table th.tinytable_css_m06wv0px490os3rkarfa { text-align: center; }
-      .table td.tinytable_css_n603xxfdn7sempbctdvs, .table th.tinytable_css_n603xxfdn7sempbctdvs { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_e0rski615htm650sxq8p, .table th.tinytable_css_e0rski615htm650sxq8p { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_d1mqbbi5tdtjhlw4dv2a, .table th.tinytable_css_d1mqbbi5tdtjhlw4dv2a { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_glk181j5byvhdevy0gr4, .table th.tinytable_css_glk181j5byvhdevy0gr4 { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_y85bdw9l37nj7sys88yb, .table th.tinytable_css_y85bdw9l37nj7sys88yb { text-align: left; }
-      .table td.tinytable_css_ne6iijqqw1n197elqejl, .table th.tinytable_css_ne6iijqqw1n197elqejl { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_9bvr7rlbbr3qd2fjdvab, .table th.tinytable_css_9bvr7rlbbr3qd2fjdvab { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_j08z20pjn6ngxfpyp58g, .table th.tinytable_css_j08z20pjn6ngxfpyp58g { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_yzdpnql29gow8nh112ww, .table th.tinytable_css_yzdpnql29gow8nh112ww { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_knst63qppy37zu8jgmk0, .table th.tinytable_css_knst63qppy37zu8jgmk0 { text-align: center; }
+      .table td.tinytable_css_kha7kbxhwzevxzxvrfg0, .table th.tinytable_css_kha7kbxhwzevxzxvrfg0 { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_8u2vyglgl59556g0waht, .table th.tinytable_css_8u2vyglgl59556g0waht { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_maw0lraje7zmeyy147ap, .table th.tinytable_css_maw0lraje7zmeyy147ap { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_ae7z6adjedswjqhtlkev, .table th.tinytable_css_ae7z6adjedswjqhtlkev { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_d01q0ew110qsi0pr8e3p, .table th.tinytable_css_d01q0ew110qsi0pr8e3p { text-align: left; }
+      .table td.tinytable_css_oukjojbmgf1pawsecxm2, .table th.tinytable_css_oukjojbmgf1pawsecxm2 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_ti2wvvsoqsyw84wk7478, .table th.tinytable_css_ti2wvvsoqsyw84wk7478 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_wzig3jjeyodgak6wff3v" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing='true'>
+      <table class="table table-borderless" id="tinytable_ak1k58qyifp19kux6l5g" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing='true'>
         <thead>
 <tr>
 <th scope="col" align="center" colspan=1> </th>
@@ -690,8 +690,8 @@ Code for the Predicted Probabilities Graph
 
     <script>
 
-      function styleCell_8m3pkj6uuhw2vgd7tvtu(i, j, css_id) {
-          var table = document.getElementById("tinytable_8m3pkj6uuhw2vgd7tvtu");
+      function styleCell_l1hz6wl35ul51v8tkn5w(i, j, css_id) {
+          var table = document.getElementById("tinytable_l1hz6wl35ul51v8tkn5w");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -701,7 +701,7 @@ Code for the Predicted Probabilities Graph
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_8m3pkj6uuhw2vgd7tvtu');
+        var table = document.getElementById('tinytable_l1hz6wl35ul51v8tkn5w');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -709,8 +709,8 @@ Code for the Predicted Probabilities Graph
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_8m3pkj6uuhw2vgd7tvtu(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_8m3pkj6uuhw2vgd7tvtu");
+      function spanCell_l1hz6wl35ul51v8tkn5w(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_l1hz6wl35ul51v8tkn5w");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -740,22 +740,22 @@ Code for the Predicted Probabilities Graph
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 6, j: 1 },  ], css_id: 'tinytable_css_x1u1iy0u8nt9k5zeq9y8',}, 
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_7mrkjyraceyav89gks44',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_ep3uly0tbbpmb1pe8098',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_9davu1ls1ojgtlbdvzhz',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_r5rhun4gczbuocq49jm6',}, 
-          { positions: [ { i: 6, j: 0 },  ], css_id: 'tinytable_css_qdmxj1st5ar0ifqxj8wo',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_9p3x3959996wdbiaeyjc',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_s1yvoczq5mmmwws74q0d',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_utd8m8zhfzjh22i00ryx',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_dmrlcrqwweko1o78o1tf',}, 
+          { positions: [ { i: 6, j: 1 },  ], css_id: 'tinytable_css_gckww30vf5ofk062b3g9',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_qrxz12te58l4xem3hr1w',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_mjh0xyacapncqxsktkcr',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_murxz0gvgw1x6yejx5mi',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_o4ifbsq5y1bjcnn34nxo',}, 
+          { positions: [ { i: 6, j: 0 },  ], css_id: 'tinytable_css_nhecqcip6vu600kj8b3a',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_pgujur50g0mwsewho6fz',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_0mh0whpdaah87x9o8cyq',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_3mo10gk4ar8xran4vxup',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_95d2wehva97pxfh3r2cn',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_8m3pkj6uuhw2vgd7tvtu(cell.i, cell.j, group.css_id);
+                  styleCell_l1hz6wl35ul51v8tkn5w(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -763,19 +763,19 @@ Code for the Predicted Probabilities Graph
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_x1u1iy0u8nt9k5zeq9y8, .table th.tinytable_css_x1u1iy0u8nt9k5zeq9y8 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_7mrkjyraceyav89gks44, .table th.tinytable_css_7mrkjyraceyav89gks44 { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_ep3uly0tbbpmb1pe8098, .table th.tinytable_css_ep3uly0tbbpmb1pe8098 { text-align: center; }
-      .table td.tinytable_css_9davu1ls1ojgtlbdvzhz, .table th.tinytable_css_9davu1ls1ojgtlbdvzhz { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_r5rhun4gczbuocq49jm6, .table th.tinytable_css_r5rhun4gczbuocq49jm6 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_qdmxj1st5ar0ifqxj8wo, .table th.tinytable_css_qdmxj1st5ar0ifqxj8wo { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_9p3x3959996wdbiaeyjc, .table th.tinytable_css_9p3x3959996wdbiaeyjc { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_s1yvoczq5mmmwws74q0d, .table th.tinytable_css_s1yvoczq5mmmwws74q0d { text-align: left; }
-      .table td.tinytable_css_utd8m8zhfzjh22i00ryx, .table th.tinytable_css_utd8m8zhfzjh22i00ryx { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_dmrlcrqwweko1o78o1tf, .table th.tinytable_css_dmrlcrqwweko1o78o1tf { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_gckww30vf5ofk062b3g9, .table th.tinytable_css_gckww30vf5ofk062b3g9 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_qrxz12te58l4xem3hr1w, .table th.tinytable_css_qrxz12te58l4xem3hr1w { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_mjh0xyacapncqxsktkcr, .table th.tinytable_css_mjh0xyacapncqxsktkcr { text-align: center; }
+      .table td.tinytable_css_murxz0gvgw1x6yejx5mi, .table th.tinytable_css_murxz0gvgw1x6yejx5mi { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_o4ifbsq5y1bjcnn34nxo, .table th.tinytable_css_o4ifbsq5y1bjcnn34nxo { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_nhecqcip6vu600kj8b3a, .table th.tinytable_css_nhecqcip6vu600kj8b3a { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_pgujur50g0mwsewho6fz, .table th.tinytable_css_pgujur50g0mwsewho6fz { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_0mh0whpdaah87x9o8cyq, .table th.tinytable_css_0mh0whpdaah87x9o8cyq { text-align: left; }
+      .table td.tinytable_css_3mo10gk4ar8xran4vxup, .table th.tinytable_css_3mo10gk4ar8xran4vxup { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_95d2wehva97pxfh3r2cn, .table th.tinytable_css_95d2wehva97pxfh3r2cn { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_8m3pkj6uuhw2vgd7tvtu" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing='true'>
+      <table class="table table-borderless" id="tinytable_l1hz6wl35ul51v8tkn5w" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing='true'>
         <thead>
 <tr>
 <th scope="col" align="center" colspan=1> </th>
