--- a/linear-regression-application.html
+++ b/linear-regression-application.html
@@ -442,26 +442,21 @@ div.csl-indent {
 </div>
 <p>First things first: how do we interpret the p-value for regression? We do a regression in order to ascertain whether there is a relationship between the independent and the dependent variable, or not. For testing whether there is one, we start from the assumption that there is none. This is what we called the null hypothesis; in our example here it would be that per capita GDP does not influence the level of democracy in a country.</p>
 <p>Now, remind yourself of the normal distribution from the video which has the mean age in its centre. In the video we were interested whether age influences height. Assuming, that there is no relationship between age and height, a regression line would look as follows:</p>
-<p><img src="main_files/figure-html/unnamed-chunk-48-1.png" width="50%" style="display: block; margin: auto;" />
-</p>
+<p><img src="images/Week%202/height_line.png" width="50%" /></p>
 <p>The line is perfectly flat (the slope coefficient is zero), intercepting the y-axis at the mean. It does so, because the regression line is the value of y we would expect on average for a given x. If this value does not vary, it has to be the average of y. If we now put a zero slope coefficient, such as the one for height, just in the more general form of <span class="math inline">\(\beta_{2}\)</span> in the centre of a normal distribution, it looks like this:</p>
-<p><img src="main_files/figure-html/unnamed-chunk-49-1.png" width="50%" style="display: block; margin: auto;" />
-</p>
+<p><img src="images/Week%202/beta2_plot.png" width="50%" /></p>
 <p>What we want to test now, with regression, is whether the slope coefficient R has calculated for us (let me denote the estimated value of <span class="math inline">\(\beta_{2}\)</span> as <span class="math inline">\(\hat{\beta_{2}}\)</span>), is far enough from this mean of zero, to say that we can be sure to say that there <em>is</em> a relationship.</p>
 <p>The statement that there <em>is</em> a relationship between the independent and the dependent variable, is called the alternative hypothesis. In our case the alternative hypothesis would read: “The level of per capita GDP influences the level of democracy in a country”.</p>
 <p>So how far away from the centre of zero do we have to go to say that there is indeed relationship, or put differently, that our alternative hypothesis is true? The standard in political science is that we need to have a 5% probability of finding a value more extreme than the one we have observed. Under the curve in the following graph, that is equal to the blue area on the right. And that is the p-value.</p>
-<p><img src="main_files/figure-html/unnamed-chunk-50-1.png" width="50%" style="display: block; margin: auto;" />
-</p>
+<p><img src="images/Week%202/beta2_highlight.png" width="50%" /></p>
 <p>If this area is 5% or less, then we have observed a value for the slope coefficient which is so far away from our assumed mean of zero, that we have sufficient evidence to reject the null hypothesis.</p>
 <p>But now, you might say, a slope coefficient can also be negative – here we are only looking at the right hand-side, and therefore at the scenario in which a slope coefficient is positive. And you are right. The scatter plot could give us a negative line. So, if we want to move away far enough from the assumed mean of zero in the centre, we must do so in both directions, to the left and to the right. Now, we need a value that is so far out, that to either side of the distribution, 2.5% of the area are left under the curve (2.5% on the left plus 2.5% on the right make the overall 5% we are interested in). We call this a two-sided test, whereas the scenario above is a one-sided test. The p-values reported by R for the slope coefficients are always two-sided tests (unless we tell R not to, but we are not doing that on this module). This value gives us the area under the normal distribution to the left and the right beyond our observed value, as shown in this figure:</p>
-<p><img src="main_files/figure-html/unnamed-chunk-51-1.png" width="50%" style="display: block; margin: auto;" />
-</p>
+<p><img src="images/Week%202/beta2_twotail.png" width="50%" /></p>
 <p>The value we are looking at in R to determine the p-value, is in the column <span class="math inline">\(Pr(&gt;|t|)\)</span>.</p>
 <p><img src="files/Week%202/pvalue.png" width="75%" style="display: block; margin: auto;" />
 </p>
 <p>In order to satisfy the requirement of the p-value being 5% or less, this value needs to be smaller than 0.05. Otherwise, more than 5% area are left, and we are not certain enough that our value is far enough away from the zero mean in the centre to say that it is “statistically different” from it. When we look at the value for the slope coefficient <code>gdppc</code> here, 0.0017, this means that the areas on the left and the right are jointly 0.17% – small enough for us to be sure to have found a value that is far enough away from zero to claim that there is a relationship. We therefore reject the null hypothesis: we find evidence for a relationship between per capita GDP and Polity V in Europe in the year 2000. Again, if we want to visualise this, the actual p-value of <span class="math inline">\(0.0017\)</span> would look like this:</p>
-<p><img src="main_files/figure-html/unnamed-chunk-53-1.png" width="50%" style="display: block; margin: auto;" />
-</p>
+<p><img src="images/Week%202/beta2_critical_bounds.png" width="50%" /></p>
 </div>
 <div id="the-goodness-of-fit-r-squared" class="section level3 unnumbered hasAnchor">
 <h3>The Goodness of Fit (R-Squared)<a href="linear-regression-application.html#the-goodness-of-fit-r-squared" class="anchor-section" aria-label="Anchor link to header"></a></h3>
