--- a/probit-application.html
+++ b/probit-application.html
@@ -417,8 +417,17 @@ div.csl-indent {
 <h2>The Coefficients<a href="probit-application.html#the-coefficients" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p>The coefficients are displayed in the results as follows:</p>
 <p><img src="files/Week%203/coef.png" width="75%" style="display: block; margin: auto;" /></p>
-<p>But how do we interpret them? As you have seen in the Theory section above, the relationship between our independent variable and the probability of democracy is not linear: the curve was s-shaped, so that the increment in probability is not the same for, say moving from <span class="math inline">\(x_{1}\)</span> to <span class="math inline">\(x_{2}\)</span> and from <span class="math inline">\(x_{2}\)</span> to <span class="math inline">\(x_{3}\)</span>. For illustration see the red bars in the following Figure:</p>
-<p><img src="main_files/figure-html/unnamed-chunk-66-1.png" width="50%" style="display: block; margin: auto;" /></p>
+<p>But how do we interpret them? As you have seen in the Theory section above, the relationship between our independent variable and the probability of democracy is not linear: the curve was s-shaped, so that the increment in probability is not the same for, say moving from <span class="math inline">\(x_{1}\)</span> to <span class="math inline">\(x_{2}\)</span> and from <span class="math inline">\(x_{2}\)</span> to <span class="math inline">\(x_{3}\)</span>. For illustration see the orange bars in the following Figure:</p>
+<p> 
+ </p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-87"></span>
+<img src="images/Week%203/lifepred.png" alt="\label{fig:lifepred}Marginal Effects for Life Expectancy on the Probability of Democracy" width="70%" />
+<p class="caption">
+Figure 19: Marginal Effects for Life Expectancy on the Probability of Democracy
+</p>
+</div>
+<p> 
+ </p>
 <p>What we therefore need to do in the world of probit, is to evaluate the probability at individual values of <span class="math inline">\(x_{i}\)</span>, or put differently, assess how much of the bell-shaped curve has slid across our cut-off point <span class="math inline">\(\tau\)</span> (tau) at a particular point <span class="math inline">\(x_{i}\)</span>. And this brings us to <span class="gls"><a href="https://drfloreiche.github.io/PO33Q/glossary-2.html">predicted probabilities</a></span>.</p>
 <hr />
 </div>
@@ -463,7 +472,16 @@ div.csl-indent {
 <div id="all-predicted-probabilities" class="section level3 unnumbered hasAnchor">
 <h3>All Predicted Probabilities<a href="probit-application.html#all-predicted-probabilities" class="anchor-section" aria-label="Anchor link to header"></a></h3>
 <p>It is also possible to depict the predicted probabilities for all values of your independent graphically. That would look like this:</p>
-<p><img src="main_files/figure-html/unnamed-chunk-74-1.png" width="50%" style="display: block; margin: auto;" /></p>
+<p> 
+ </p>
+<div class="figure" style="text-align: center"><span style="display:block;" id="fig:unnamed-chunk-96"></span>
+<img src="images/Week%203/predprob.png" alt="\label{fig:predprob}Predicted Probabilities" width="70%" />
+<p class="caption">
+Figure 20: Predicted Probabilities
+</p>
+</div>
+<p> 
+ </p>
 <div class="baser">
 <details>
 <summary>
@@ -525,8 +543,8 @@ Code for the Predicted Probabilities Graph
 
     <script>
 
-      function styleCell_wzig3jjeyodgak6wff3v(i, j, css_id) {
-          var table = document.getElementById("tinytable_wzig3jjeyodgak6wff3v");
+      function styleCell_3gr96s4mddmg5hojvckb(i, j, css_id) {
+          var table = document.getElementById("tinytable_3gr96s4mddmg5hojvckb");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -536,7 +554,7 @@ Code for the Predicted Probabilities Graph
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_wzig3jjeyodgak6wff3v');
+        var table = document.getElementById('tinytable_3gr96s4mddmg5hojvckb');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -544,8 +562,8 @@ Code for the Predicted Probabilities Graph
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_wzig3jjeyodgak6wff3v(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_wzig3jjeyodgak6wff3v");
+      function spanCell_3gr96s4mddmg5hojvckb(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_3gr96s4mddmg5hojvckb");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -575,22 +593,22 @@ Code for the Predicted Probabilities Graph
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 6, j: 1 },  ], css_id: 'tinytable_css_s3vlorps3pfbu84ggzlt',}, 
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_fkbv4pd0wpv889kcmpzc',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_m06wv0px490os3rkarfa',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_n603xxfdn7sempbctdvs',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_e0rski615htm650sxq8p',}, 
-          { positions: [ { i: 6, j: 0 },  ], css_id: 'tinytable_css_d1mqbbi5tdtjhlw4dv2a',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_glk181j5byvhdevy0gr4',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_y85bdw9l37nj7sys88yb',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_ne6iijqqw1n197elqejl',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_9bvr7rlbbr3qd2fjdvab',}, 
+          { positions: [ { i: 6, j: 1 },  ], css_id: 'tinytable_css_6qwf8exhwvfdxhss9h4d',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_0tqdk9fk6b5mwcnispw6',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_tnezzhjf4t46efgxh7se',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_vr157mbto6s9njpr811l',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_5lmqr6e48wotsd9i60qj',}, 
+          { positions: [ { i: 6, j: 0 },  ], css_id: 'tinytable_css_wpplmit3f2cxdlri1p7p',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_vjokf9ilu0ygf0dinydc',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_7gg988ppn9y13o8ep7h7',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_bb9f8xxxdzowkd27pjh4',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_8yc1mkybngan2jplt45p',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_wzig3jjeyodgak6wff3v(cell.i, cell.j, group.css_id);
+                  styleCell_3gr96s4mddmg5hojvckb(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -598,25 +616,25 @@ Code for the Predicted Probabilities Graph
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_s3vlorps3pfbu84ggzlt, .table th.tinytable_css_s3vlorps3pfbu84ggzlt { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_fkbv4pd0wpv889kcmpzc, .table th.tinytable_css_fkbv4pd0wpv889kcmpzc { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_m06wv0px490os3rkarfa, .table th.tinytable_css_m06wv0px490os3rkarfa { text-align: center; }
-      .table td.tinytable_css_n603xxfdn7sempbctdvs, .table th.tinytable_css_n603xxfdn7sempbctdvs { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_e0rski615htm650sxq8p, .table th.tinytable_css_e0rski615htm650sxq8p { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_d1mqbbi5tdtjhlw4dv2a, .table th.tinytable_css_d1mqbbi5tdtjhlw4dv2a { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_glk181j5byvhdevy0gr4, .table th.tinytable_css_glk181j5byvhdevy0gr4 { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_y85bdw9l37nj7sys88yb, .table th.tinytable_css_y85bdw9l37nj7sys88yb { text-align: left; }
-      .table td.tinytable_css_ne6iijqqw1n197elqejl, .table th.tinytable_css_ne6iijqqw1n197elqejl { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_9bvr7rlbbr3qd2fjdvab, .table th.tinytable_css_9bvr7rlbbr3qd2fjdvab { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_6qwf8exhwvfdxhss9h4d, .table th.tinytable_css_6qwf8exhwvfdxhss9h4d { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_0tqdk9fk6b5mwcnispw6, .table th.tinytable_css_0tqdk9fk6b5mwcnispw6 { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_tnezzhjf4t46efgxh7se, .table th.tinytable_css_tnezzhjf4t46efgxh7se { text-align: center; }
+      .table td.tinytable_css_vr157mbto6s9njpr811l, .table th.tinytable_css_vr157mbto6s9njpr811l { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_5lmqr6e48wotsd9i60qj, .table th.tinytable_css_5lmqr6e48wotsd9i60qj { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_wpplmit3f2cxdlri1p7p, .table th.tinytable_css_wpplmit3f2cxdlri1p7p { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_vjokf9ilu0ygf0dinydc, .table th.tinytable_css_vjokf9ilu0ygf0dinydc { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_7gg988ppn9y13o8ep7h7, .table th.tinytable_css_7gg988ppn9y13o8ep7h7 { text-align: left; }
+      .table td.tinytable_css_bb9f8xxxdzowkd27pjh4, .table th.tinytable_css_bb9f8xxxdzowkd27pjh4 { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_8yc1mkybngan2jplt45p, .table th.tinytable_css_8yc1mkybngan2jplt45p { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_wzig3jjeyodgak6wff3v" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing='true'>
+      <table class="table table-borderless" id="tinytable_3gr96s4mddmg5hojvckb" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing='true'>
         <thead>
 <tr>
 <th scope="col" align="center" colspan=1> </th>
 <th scope="col" align="center" colspan=1>Dependent Variable:<br>Democracy</th>
 </tr>
-        <caption><span id="tab:reg">Table 4: </span> Influence of per capita GDP on Democracy</caption>
+        <caption><span id="tab:reg">Table 5: </span> Influence of per capita GDP on Democracy</caption>
               <tr>
                 <th scope="col"> </th>
                 <th scope="col">(1)</th>
@@ -695,8 +713,8 @@ Code for the Predicted Probabilities Graph
 
     <script>
 
-      function styleCell_8m3pkj6uuhw2vgd7tvtu(i, j, css_id) {
-          var table = document.getElementById("tinytable_8m3pkj6uuhw2vgd7tvtu");
+      function styleCell_1fafm7yih69dtfakgnix(i, j, css_id) {
+          var table = document.getElementById("tinytable_1fafm7yih69dtfakgnix");
           var cell = table.rows[i]?.cells[j];  // Safe navigation to avoid errors
           if (cell) {
               console.log(`Styling cell at (${i}, ${j}) with class ${css_id}`);
@@ -706,7 +724,7 @@ Code for the Predicted Probabilities Graph
           }
       }
       function insertSpanRow(i, colspan, content) {
-        var table = document.getElementById('tinytable_8m3pkj6uuhw2vgd7tvtu');
+        var table = document.getElementById('tinytable_1fafm7yih69dtfakgnix');
         var newRow = table.insertRow(i);
         var newCell = newRow.insertCell(0);
         newCell.setAttribute("colspan", colspan);
@@ -714,8 +732,8 @@ Code for the Predicted Probabilities Graph
         // this may be unsafe, but innerText does not interpret <br>
         newCell.innerHTML = content;
       }
-      function spanCell_8m3pkj6uuhw2vgd7tvtu(i, j, rowspan, colspan) {
-        var table = document.getElementById("tinytable_8m3pkj6uuhw2vgd7tvtu");
+      function spanCell_1fafm7yih69dtfakgnix(i, j, rowspan, colspan) {
+        var table = document.getElementById("tinytable_1fafm7yih69dtfakgnix");
         const targetRow = table.rows[i];
         const targetCell = targetRow.cells[j];
         for (let r = 0; r < rowspan; r++) {
@@ -745,22 +763,22 @@ Code for the Predicted Probabilities Graph
       window.addEventListener('load', function () {
           var cellsToStyle = [
             // tinytable style arrays after
-          { positions: [ { i: 6, j: 1 },  ], css_id: 'tinytable_css_x1u1iy0u8nt9k5zeq9y8',}, 
-          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_7mrkjyraceyav89gks44',}, 
-          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_ep3uly0tbbpmb1pe8098',}, 
-          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_9davu1ls1ojgtlbdvzhz',}, 
-          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_r5rhun4gczbuocq49jm6',}, 
-          { positions: [ { i: 6, j: 0 },  ], css_id: 'tinytable_css_qdmxj1st5ar0ifqxj8wo',}, 
-          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_9p3x3959996wdbiaeyjc',}, 
-          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_s1yvoczq5mmmwws74q0d',}, 
-          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_utd8m8zhfzjh22i00ryx',}, 
-          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_dmrlcrqwweko1o78o1tf',}, 
+          { positions: [ { i: 6, j: 1 },  ], css_id: 'tinytable_css_vv20miea8wi1qc6qit19',}, 
+          { positions: [ { i: 5, j: 1 },  ], css_id: 'tinytable_css_yfeg3fozxv6eqg7v0x0a',}, 
+          { positions: [ { i: 2, j: 1 }, { i: 3, j: 1 }, { i: 4, j: 1 },  ], css_id: 'tinytable_css_zom5fxld7sjmciwivkgo',}, 
+          { positions: [ { i: 0, j: 1 },  ], css_id: 'tinytable_css_bmoaqhpny38igdnv8fmz',}, 
+          { positions: [ { i: 1, j: 1 },  ], css_id: 'tinytable_css_jq44kmpbcgv6ueyiwahe',}, 
+          { positions: [ { i: 6, j: 0 },  ], css_id: 'tinytable_css_uboe1i7rxdul7o7g9aqf',}, 
+          { positions: [ { i: 5, j: 0 },  ], css_id: 'tinytable_css_zn7ajtprw9zsbmim56ig',}, 
+          { positions: [ { i: 2, j: 0 }, { i: 3, j: 0 }, { i: 4, j: 0 },  ], css_id: 'tinytable_css_nhrc698k0xg1iilsfi15',}, 
+          { positions: [ { i: 0, j: 0 },  ], css_id: 'tinytable_css_c0r6ozb54hemeon3p3ml',}, 
+          { positions: [ { i: 1, j: 0 },  ], css_id: 'tinytable_css_b1cgyom7abryx5ax04q3',}, 
           ];
 
           // Loop over the arrays to style the cells
           cellsToStyle.forEach(function (group) {
               group.positions.forEach(function (cell) {
-                  styleCell_8m3pkj6uuhw2vgd7tvtu(cell.i, cell.j, group.css_id);
+                  styleCell_1fafm7yih69dtfakgnix(cell.i, cell.j, group.css_id);
               });
           });
       });
@@ -768,19 +786,19 @@ Code for the Predicted Probabilities Graph
 
     <style>
       /* tinytable css entries after */
-      .table td.tinytable_css_x1u1iy0u8nt9k5zeq9y8, .table th.tinytable_css_x1u1iy0u8nt9k5zeq9y8 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_7mrkjyraceyav89gks44, .table th.tinytable_css_7mrkjyraceyav89gks44 { text-align: center; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_ep3uly0tbbpmb1pe8098, .table th.tinytable_css_ep3uly0tbbpmb1pe8098 { text-align: center; }
-      .table td.tinytable_css_9davu1ls1ojgtlbdvzhz, .table th.tinytable_css_9davu1ls1ojgtlbdvzhz { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_r5rhun4gczbuocq49jm6, .table th.tinytable_css_r5rhun4gczbuocq49jm6 { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
-      .table td.tinytable_css_qdmxj1st5ar0ifqxj8wo, .table th.tinytable_css_qdmxj1st5ar0ifqxj8wo { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
-      .table td.tinytable_css_9p3x3959996wdbiaeyjc, .table th.tinytable_css_9p3x3959996wdbiaeyjc { text-align: left; border-bottom: solid black 0.05em; }
-      .table td.tinytable_css_s1yvoczq5mmmwws74q0d, .table th.tinytable_css_s1yvoczq5mmmwws74q0d { text-align: left; }
-      .table td.tinytable_css_utd8m8zhfzjh22i00ryx, .table th.tinytable_css_utd8m8zhfzjh22i00ryx { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
-      .table td.tinytable_css_dmrlcrqwweko1o78o1tf, .table th.tinytable_css_dmrlcrqwweko1o78o1tf { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_vv20miea8wi1qc6qit19, .table th.tinytable_css_vv20miea8wi1qc6qit19 { text-align: center; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_yfeg3fozxv6eqg7v0x0a, .table th.tinytable_css_yfeg3fozxv6eqg7v0x0a { text-align: center; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_zom5fxld7sjmciwivkgo, .table th.tinytable_css_zom5fxld7sjmciwivkgo { text-align: center; }
+      .table td.tinytable_css_bmoaqhpny38igdnv8fmz, .table th.tinytable_css_bmoaqhpny38igdnv8fmz { text-align: center; border-top: solid #d3d8dc 0.1em; text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_jq44kmpbcgv6ueyiwahe, .table th.tinytable_css_jq44kmpbcgv6ueyiwahe { text-align: center; border-bottom: solid #d3d8dc 0.05em; }
+      .table td.tinytable_css_uboe1i7rxdul7o7g9aqf, .table th.tinytable_css_uboe1i7rxdul7o7g9aqf { text-align: left; border-bottom: solid #d3d8dc 0.1em; }
+      .table td.tinytable_css_zn7ajtprw9zsbmim56ig, .table th.tinytable_css_zn7ajtprw9zsbmim56ig { text-align: left; border-bottom: solid black 0.05em; }
+      .table td.tinytable_css_nhrc698k0xg1iilsfi15, .table th.tinytable_css_nhrc698k0xg1iilsfi15 { text-align: left; }
+      .table td.tinytable_css_c0r6ozb54hemeon3p3ml, .table th.tinytable_css_c0r6ozb54hemeon3p3ml { text-align: left; border-top: solid #d3d8dc 0.1em; text-align: center; }
+      .table td.tinytable_css_b1cgyom7abryx5ax04q3, .table th.tinytable_css_b1cgyom7abryx5ax04q3 { text-align: left; border-bottom: solid #d3d8dc 0.05em; }
     </style>
     <div class="container">
-      <table class="table table-borderless" id="tinytable_8m3pkj6uuhw2vgd7tvtu" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing='true'>
+      <table class="table table-borderless" id="tinytable_1fafm7yih69dtfakgnix" style="width: auto; margin-left: auto; margin-right: auto;" data-quarto-disable-processing='true'>
         <thead>
 <tr>
 <th scope="col" align="center" colspan=1> </th>
